--- a/app/src/main/res/menu/book_details.xml
+++ b/app/src/main/res/menu/book_details.xml
@@ -3,9 +3,15 @@
     tools:context="fri.ep.bookstore.activity.BookDetailsActivity" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/action_edit"
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_edit"/>
+
+    <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="2"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_delete"/>
 
 </menu>
