--- a/app/src/main/res/menu/book_details.xml
+++ b/app/src/main/res/menu/book_details.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_edit"
         android:orderInCategory="1"
-        android:showAsAction="ifRoom"
+        android:showAsAction="never"
         android:title="@string/action_edit"/>
 
     <item
